--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "parallax-js": "^3.1.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-media": "^1.8.0",
     "react-scripts": "1.1.5",
     "styled-components": "^3.4.5",
     "webfontloader": "^1.6.28"
